--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "8ui",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "private": false,
   "keywords": ["react", "components", "ui"],
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.tsx",
+  "module": "dist/index.tsx",
   "files": [ "dist", "README.md" ],
   "repository": {
       "type": "git",
